--- a/operations.html
+++ b/operations.html
@@ -100,17 +100,50 @@
         <h2>Flight Manual</h2>
         <p>This section contains the operational flight manual, including flight procedures, safety measures, and emergency protocols.</p>
         
-        <a href="C:\OD\OneDrive - Anavia AG\Desktop\Work\Website\Operations-test\Documents\24012025_FO-MAN.001.1.0_Aircraft Flight Manual.pdf" target="_blank" class="button-link">
+        <a href="C:\OD\OneDrive - Anavia AG\Desktop\Work\Website\Operations-test\Documents\AFM\24012025_FO-MAN.001.1.0_Aircraft Flight Manual.pdf" target="_blank" class="button-link">
             <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; margin-top: 15px;">
                 View AFM Document
             </button>
         </a>
     </section>
 
-    <section id="system-description" class="section">
-        <h2>System Description</h2>
-        <p>Detailed descriptions of the aircraft systems, components, and their functionality to support mission success.</p>
-    </section>
+<section id="system-description" class="section">
+    <h2>Payloads & System Links</h2>
+    <p style="margin-bottom: 20px;">Explore the available payload options and communication systems for different missions.</p>
+
+    <!-- Gimbals -->
+    <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <h3 style="min-width: 150px; padding: 5px 10px; background-color: #f2f2f2; border-left: 5px solid #FFA500; margin-right: 20px; color: #333; font-weight: bold;">Gimbals</h3>
+        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+            <a href="C:\OD\OneDrive - Anavia AG\Desktop\Work\Website\Operations-test\Documents\Epsilon" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer;">Epsilon 180</button>
+            </a>
+            <a href="C:\OD\OneDrive - Anavia AG\Desktop\Work\Website\Operations-test\Documents\Controp" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer;">Controp</button>
+            </a>
+        </div>
+    </div>
+
+    <!-- Elsight Communication System -->
+    <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <h3 style="min-width: 150px; padding: 5px 10px; background-color: #f2f2f2; border-left: 5px solid #FFA500; margin-right: 20px; color: #333; font-weight: bold;">Elsight</h3>
+        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+            <a href="C:\OD\OneDrive - Anavia AG\Desktop\Work\Website\Operations-test\Documents\Elsight" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer;">Elsight Overview</button>
+            </a>
+        </div>
+    </div>
+
+    <!-- Silvus Communication System -->
+    <div style="display: flex; align-items: center; margin-bottom: 20px;">
+        <h3 style="min-width: 150px; padding: 5px 10px; background-color: #f2f2f2; border-left: 5px solid #FFA500; margin-right: 20px; color: #333; font-weight: bold;">Silvus</h3>
+        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+            <a href="C:\OD\OneDrive - Anavia AG\Desktop\Work\Website\Operations-test\Documents\Silvus" target="_blank">
+                <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; cursor: pointer;">Silvus Overview</button>
+            </a>
+        </div>
+    </div>
+</section>
 
     <section id="flight-log" class="section">
         <h2>Flight Log</h2>
@@ -126,11 +159,16 @@
     <section id="test-validations" class="section">
         <h2>Test & Validations</h2>
         <p>Records of system tests, validations, and performance evaluations to ensure operational reliability.</p>
+            <div style="display: flex; gap: 15px; flex-wrap: wrap; justify-content: flex-start; margin-top: 20px;">
+                <a href="C:\OD\Anavia AG\6 - FLOPS - Dokumente\Flight Documentation\HT-100\Flight Logs" target="_blank">
+            <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; font-size: 16px; cursor: pointer;">Flight Logs</button>
+                </a>
+                 </div>
     </section>
 
 <section id="flight-tools" class="section">
     <h2>Flight Tools</h2>
-    <p>Access essential tools for flight planning and monitoring.</p>
+    <p style="margin-bottom: 20px;">Access essential tools for flight planning and monitoring.</p>
 
     <!-- Weather Tools -->
     <div style="display: flex; align-items: center; margin-bottom: 20px;">
@@ -186,16 +224,12 @@
     <p>Access critical flight documentation and forms.</p>
 
     <div style="display: flex; gap: 15px; flex-wrap: wrap; justify-content: flex-start; margin-top: 20px;">
-        <a href="path/to/briefing-folder" target="_blank">
+        <a href="C:\OD\Anavia AG\6 - FLOPS - Dokumente\Flight Documentation\HT-100\Briefing" target="_blank">
             <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; font-size: 16px; cursor: pointer;">Briefings</button>
         </a>
 
-        <a href="path/to/flight-auth-folder" target="_blank">
+        <a href="C:\OD\Anavia AG\6 - FLOPS - Dokumente\Flight Documentation\HT-100\Flight Auth & Fit for Flight" target="_blank">
             <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; font-size: 16px; cursor: pointer;">Flight Auth & Fit for Flight</button>
-        </a>
-
-        <a href="path/to/flight-logs-folder" target="_blank">
-            <button style="padding: 10px 20px; background-color: #FFA500; color: white; border: none; border-radius: 5px; font-size: 16px; cursor: pointer;">Flight Logs</button>
         </a>
     </div>
 </section>
